use Integer.valueOf instead of new Integer
git-svn-id: https://svn.exedio.com/cope/trunk/jspm@4821 e7d4fc99-c606-0410-b9bf-843393a9eab7